@startuml
'https://plantuml.com/sequence-diagram

TodoApp --> TodoController
TodoController -->AppendTodoFile
TodoController = EditTable
EditTable <-> Input
AppendTodoFile <-> Input
AppendTodoFile <-> EditTable


class TodoApp
{
    +main()
    +start()
}

class Input
{
    -String dueDate
    -String todoTask
    -Boolean bool

    +Input()
    +getDueDate()
    +setDueDate()
    +getTodoText()
    +getBool()
    +setBool()
    +limitInput()
}

class AppendTodoFile
{
    -String fileDirectory
    -String originalPath
    -String fileName

    +appendTodoFile()
    +FileName()
    +initFile()
    +returnFileDirec()
    +initFilePath()
    +loadFile()
    +editFile()
}

class TodoController
{
    -TableView<Input> table
    -ObservableList<Input> dataTemp
    -ObservableList<Input> data
    -DatePicker selectDueDate
    -TextField todoInput
    -TableColumn<Todo, String> dueDateSection
    -TableColumn<Todo, String> todoDescription
    -TableColumn<Todo, Boolean> completedColumn
    -AppendTodoFile manage
    -FileChooser fileC


    +Initialize()
    +AddListClick()
    +DelListClick()
    +DisplayAllClick()
    +ShowCompleteClick()
    +ShowIncompleteClick()
    +AddTaskClick()
    +DelTaskClick()
    +SaveFile()
    +loadFile()
    +Quit()
}

class EditTable
{
   +AdjustDate
   +AdjustText
   +AdjustStatus

}

@enduml